# influxdb-secret-controller

./: Containerfile  LICENCE.md  README.md  pyproject.toml  test-secret.yml
.github/workflows/: build-container.yml  build-helm-chart.yml
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
influxdb_secret_controller/: __main__.py  config.py  controller.py  influxdb.py  token_secret.py
scripts/: get_version.py
